Fix header align

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -10,7 +10,7 @@
 } 
 .nav-one-ul-container {
   font-size: 18px;
-  /* margin-left: 200px; */
+  /* margin-left: -200px; */
   /* justify-content: center;
   align-items: center;
   margin-top: 15px; */
@@ -27,7 +27,7 @@
   border: 2px solid #3024c6;
   margin-top: 30px;
   /* margin-left: -50vh; */
-  /* right: 15%; */
+  right: 15%;
   border-radius: 8px;
   padding: 30px;
   z-index: 99;
@@ -87,6 +87,9 @@ h3.drop-down-info-title {
   .nav-two {
     display: none;
   }
+  .drop-down-container {
+    right: 8%;
+  } 
 }
 
 /* @media (max-width: 280px) {
